# databases-24

./: pyproject.toml
databases_24/data/: university.db
databases_24/ex1/: Ex1_LuisZüttel_GionRubitschung_D1P.ipynb  ex1.ipynb
databases_24/ex1/files/: department.csv  instructor.csv
databases_24/ex10/: Ex10_LuisZüttel_GionRubitschung_D1P.ipynb
databases_24/ex10/jdbc-assignment/src/: JdbcExample.java
databases_24/ex10/jpa-assignment/src/: Department.java  Instructor.java  JPAExample.java
databases_24/ex11/: Ex11_LuisZüttel_GionRubitschung_D1P.ipynb
databases_24/ex12/: Ex12_LuisZüttel_GionRubitschung_D1P.ipynb
databases_24/ex13/: Ex13_LuisZüttel_GionRubitschung_D1P.ipynb
databases_24/ex2/: Ex2_LuisZüttel_GionRubitschung_D1P.ipynb
databases_24/ex3/: Ex3_LuisZüttel_GionRubitschung_D1P.ipynb
databases_24/ex4/: Ex4_LuisZüttel_GionRubitschung_D1P.ipynb
databases_24/ex5/: Ex5_LuisZüttel_GionRubitschung_D1P.ipynb
databases_24/ex6/: Ex6_LuisZüttel_GionRubitschung_D1P.ipynb
databases_24/ex7/: Ex7_LuisZüttel_GionRubitschung_D1P.ipynb
databases_24/ex8/: Ex8_LuisZüttel_GionRubitschung_D1P.ipynb
databases_24/ex9/: Ex9_LuisZüttel_GionRubitschung_D1P.ipynb
