[tool.poetry]
name = "databases-24"
version = "0.1.0"
description = ""
authors = ["Gion Rubitschung <gionrubi@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipython-sql = "^0.5.0"
ipykernel = "^6.29.2"
ipython = "^8.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
