[tool.poetry]
name = "databases-24"
version = "0.1.0"
description = ""
authors = ["Gion Rubitschung <gionrubi@proton.me>", "Luis Züttel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.2"
ipython = "^8.21.0"
pandas = "^2.2.0"
nbconvert = "^7.16.1"
jupysql = "^0.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
